--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
+    "framer-motion": "^12.9.2",
     "gsap": "^3.12.7",
     "lucide-react": "^0.501.0",
     "react": "^18.3.1",
