--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-router-dom": "^7.5.1",
     "tailwind-scrollbar-hide": "^2.0.0"
   },
