--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.8.3",
     "@tailwindcss/vite": "^4.1.3",
     "framer-motion": "^12.9.2",
+    "gapi-script": "^1.2.0",
+    "googleapis": "^149.0.0",
     "gsap": "^3.12.7",
     "lucide-react": "^0.501.0",
     "react": "^18.3.1",
@@ -20,22 +23,31 @@
     "react-helmet-async": "^2.0.5",
     "react-lazy-load-image-component": "^1.6.3",
     "react-router-dom": "^7.5.1",
-    "tailwind-scrollbar-hide": "^2.0.0"
+    "tailwind-scrollbar-hide": "^2.0.0",
+    "yet-another-react-lightbox": "^3.23.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/gapi": "^0.0.47",
+    "@types/gapi.auth2": "^0.0.61",
+    "@types/gapi.client": "^1.0.8",
+    "@types/gapi.client.calendar": "^3.0.12",
     "@types/node": "^22.14.1",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/paypal__paypal-js": "^2.1.0",
+    "@types/react": "^19.1.4",
+    "@types/react-calendar": "^4.1.0",
+    "@types/react-dom": "^19.1.5",
     "@types/react-helmet": "^6.1.11",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "firebase": "^11.8.0",
     "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
+    "react-calendar": "^5.1.0",
     "tailwindcss": "^4.1.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
