--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,14 @@ dist-ssr
 *.local
 
 # Editor directories and files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.development
+.env.test
+.env.production
 .vscode/*
 !.vscode/extensions.json
 .idea
