--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "googleapis": "^149.0.0",
     "gsap": "^3.12.7",
     "lucide-react": "^0.501.0",
+    "parallax-js": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
@@ -33,6 +34,7 @@
     "@types/gapi.client": "^1.0.8",
     "@types/gapi.client.calendar": "^3.0.12",
     "@types/node": "^22.14.1",
+    "@types/parallax-js": "^3.1.3",
     "@types/paypal__paypal-js": "^2.1.0",
     "@types/react": "^19.1.4",
     "@types/react-calendar": "^4.1.0",
@@ -52,6 +54,7 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0",
-    "vite-plugin-gh-pages": "^1.0.1"
+    "vite-plugin-gh-pages": "^1.0.1",
+    "vite-plugin-pages": "^0.33.0"
   }
 }
