--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "parallax-js": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-lazy-load-image-component": "^1.6.3",
-    "react-router-dom": "^7.5.1",
+    "react-router-dom": "^7.6.1",
     "tailwind-scrollbar-hide": "^2.0.0",
     "yet-another-react-lightbox": "^3.23.2"
   },
