--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@paypal/react-paypal-js": "^8.8.3",
     "@tailwindcss/vite": "^4.1.3",
+    "firebase-admin": "^13.4.0",
     "framer-motion": "^12.9.2",
     "gapi-script": "^1.2.0",
     "googleapis": "^149.0.0",
