--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@paypal/react-paypal-js": "^8.8.3",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.3",
     "firebase-admin": "^13.4.0",
     "framer-motion": "^12.9.2",
@@ -25,7 +26,9 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-lazy-load-image-component": "^1.6.3",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1",
+    "redux-persist": "^6.0.0",
     "tailwind-scrollbar-hide": "^2.0.0",
     "yet-another-react-lightbox": "^3.23.2"
   },
