--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "@paypal/react-paypal-js": "^8.8.3",
     "@reduxjs/toolkit": "^2.8.2",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.1",
     "@tailwindcss/vite": "^4.1.3",
+    "axios": "^1.10.0",
     "firebase-admin": "^13.4.0",
     "framer-motion": "^12.9.2",
     "gapi-script": "^1.2.0",
