--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1",
     "redux-persist": "^6.0.0",
+    "swiper": "^11.2.10",
     "tailwind-scrollbar-hide": "^2.0.0",
     "yet-another-react-lightbox": "^3.23.2"
   },
