--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@stripe/stripe-js": "^7.3.1",
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.10.0",
+    "date-fns": "^4.1.0",
     "firebase-admin": "^13.4.0",
     "framer-motion": "^12.9.2",
     "gapi-script": "^1.2.0",
@@ -25,6 +26,7 @@
     "lucide-react": "^0.501.0",
     "parallax-js": "^3.1.0",
     "react": "^18.3.1",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
@@ -47,6 +49,7 @@
     "@types/paypal__paypal-js": "^2.1.0",
     "@types/react": "^19.1.4",
     "@types/react-calendar": "^4.1.0",
+    "@types/react-date-range": "^1.4.10",
     "@types/react-dom": "^19.1.5",
     "@types/react-helmet": "^6.1.11",
     "@vitejs/plugin-react": "^4.3.4",
