--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "server": "node server/index.js",
+    "server:dev": "nodemon server/index.js",
+    "dev:all": "concurrently \"npm run dev\" \"npm run server:dev\""
   },
   "dependencies": {
     "@paypal/react-paypal-js": "^8.8.3",
@@ -17,7 +20,11 @@
     "@stripe/stripe-js": "^7.3.1",
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.10.0",
+    "canvas-confetti": "^1.9.4",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "firebase-admin": "^13.4.0",
     "framer-motion": "^12.9.2",
     "gapi-script": "^1.2.0",
@@ -30,16 +37,19 @@
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.71.1",
     "react-lazy-load-image-component": "^1.6.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1",
     "redux-persist": "^6.0.0",
     "swiper": "^11.2.10",
     "tailwind-scrollbar-hide": "^2.0.0",
-    "yet-another-react-lightbox": "^3.23.2"
+    "yet-another-react-lightbox": "^3.23.2",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/gapi": "^0.0.47",
     "@types/gapi.auth2": "^0.0.61",
     "@types/gapi.client": "^1.0.8",
@@ -54,12 +64,14 @@
     "@types/react-helmet": "^6.1.11",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
+    "concurrently": "^9.2.1",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "firebase": "^11.8.0",
     "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
+    "nodemon": "^3.1.11",
     "postcss": "^8.5.3",
     "react-calendar": "^5.1.0",
     "tailwindcss": "^4.1.3",
