--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pethome-server",
   "version": "1.0.0",
-  "description": "Backend server for Printful and Stripe integration",
+  "description": "Backend de PetHome para integraciones de Stripe y Printful.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
